# Merit

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  merit_dev.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_wallet_balance.py
backend/app/: __init__.py  main.py
backend/app/core/: arq_worker.py  celery_app.py  config.py  database.py  redis.py  security.py
backend/app/middleware/: __init__.py  auth.py  rate_limit.py
backend/app/models/: __init__.py  application.py  audit_log.py  compliance_submission.py  eligibility_evaluation.py  enums.py  funding_pool.py  notification.py  ocr_result.py  organization.py  program.py  program_requirement.py  stellar_wallet.py  transaction.py  uploaded_document.py  user.py
backend/app/schemas/: application.py  audit.py  auth.py  compliance.py  (+5 more)
backend/tests/: test_application_service.py  test_audit_property.py  test_audit_service.py  test_auth.py  test_condition_evaluation.py  test_condition_evaluation_property.py  test_document_service.py  test_eligibility_evaluation.py  test_eligibility_property.py  test_funding_property.py  test_funding_service.py  test_notification_service.py  test_ocr_property.py  test_ocr_service.py  test_program_lifecycle_property.py  test_program_service.py  test_rate_limit.py  test_rbac_middleware.py  test_rbac_property.py  test_requirement_management.py  test_verification_service.py  test_wallet_service.py  test_wallet_uniqueness_property.py
contracts/merit-funding/: Cargo.toml
(+103 files in other folders)
